# acqiris-httpd

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: version.cmake
src/: CMakeLists.txt  bower.sh
src/html/: ctor.js  events.js  index.html  loadbanner.js  package.json  style.css
src/httpd/: CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  constants.hpp  datastorage.cpp  datastorage.hpp  endian_decoder_t.hpp  httpd.sh.in  log.cpp  log.hpp  main.cpp  page_handler.cpp  page_handler.hpp  postinst.in  request.hpp  request_handler.cpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
src/httpd/acqiris/: digitizer.cpp  digitizer.hpp  task.cpp  task.hpp
src/libs/: CMakeLists.txt
src/libs/acqiris-gui/: CMakeLists.txt  app.cpp  app.hpp  document.cpp  document.hpp  mainwindow.cpp  mainwindow.hpp  request_handler.cpp  xyseriesdata.cpp
